# qshell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  battery.cpp  battery.h  button.cpp  dash.cpp  dash.h  date.cpp  date.h  desktop.cpp  desktop.h  frame.cpp  frame.h  logout.cpp  logout.h  mediaplayer.cpp  mediaplayer.h  model.cpp  model.h  network.cpp  network.h  notificationsdialog.cpp  notificationsdialog.h  org.kde.plasmashell.desktop  panel.cpp  panel.h  qshell-init  qshell-session  qshell.desktop  qshell.pro  qshellctl  shell.cpp  shell.h  systray.h  tasks.cpp  tasks.h  trash.cpp  trash.h  (+4 more)
pamixer/: .directory  pamixer
src/: README.md  battery.cpp  battery.h  button.cpp  button.h  dash.cpp  dash.h  date.cpp  date.h  desktop.cpp  desktop.h  frame.cpp  frame.h  icon.h  label.cpp  label.h  logout.cpp  logout.h  mediaplayer.cpp  mediaplayer.h  model.h  network.cpp  network.h  notificationsdialog.cpp  notificationsdialog.h  panel.cpp  panel.h  position.h  shell.cpp  shell.h  shellapplication.h  systray.cpp  systray.h  tasks.cpp  tasks.h  trash.cpp  trash.h  utils.h  volume.cpp  volume.h  (+2 more)
theme/: dark.css  qshell.css  qshellrc
theme/gnome/: qshell.css  qshellrc
theme/unity/: qshellrc
theme/unity-bottom/: bottomrc
themes/: README.md
themes/rose/: qshell.css  qshellrc
themes/rose/qshell/: infopanel.sh
themes/sora/: qshell  qshell.css  qshellrc
themes/unity/: qshell.css
themes/unity-bottom/: bottom.css
themes/windows/: qshellrc
